<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">表情</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="dialog_show">弹框测试</string>
    <string name="face_say_on_angry">憋嘴说话</string>
    <string name="face_afraid">害怕</string>
    <string name="face_shy">害羞</string>
    <string name="face_fighting">加油</string>
    <string name="face_cry">哭</string>
    <string name="face_cool">酷</string>
    <string name="face_acting_cute">卖萌</string>
    <string name="face_sad">难过</string>
    <string name="face_rage">怒</string>
    <string name="face_kiss">亲亲</string>
    <string name="face_give_ear_to">倾听</string>
    <string name="face_sleep">睡觉</string>
    <string name="face_saying">说话</string>
    <string name="face_laugh_squint">笑眯眼</string>
    <string name="face_study">学习</string>
    <string name="face_giddy">晕</string>
    <string name="face_nictation">眨眼</string>
    <string name="face_touch">摸头</string>
    <string name="face_quiet">安静</string>
    <string name="face_lock">锁屏</string>
    <string name="face_unlock">解锁</string>
    <string name="face_unknow">未知</string>
    <string name="face_monitor">解锁</string>
    
    
    
    <string name="face_auto_test">自动测试</string>
    <string name="face_stop_test">停止测试</string>

</resources>